photobiologyWavebands 0.2.3
===========================

Now all contructors of waveband objects for BSWFs, have formal arguments
w.low and w.high, with values earlier in use, now set as defaults.

User Guide edited to match current versions of packages photobiology
and photobiologygg, as well as to update to to the current version.

photobiologyWavebands 0.2.2
===========================

Changed the definition of SWFs functions not to have any
intrinsic wavelength limitts, and made this limit
a new formal argument on the waveband constructor functions,
keeping the same defaults. Returned values
should remain unchanged. This bit of flexibility is needed
as different authors have used different limits
for the same BSWFs.

A new formulation for GPAS has been added. The formulation
by Micheletti and Piacentini (2002) is used for
example in the TUV model (version 5.0). The new waveband
contructor is GEN.M().

photobiologyWavebands 0.2.1
===========================

Changed the definition of SWFs to not include wavelengths
shorter than 280 nm, except for the case of UVR8 absorbance.

photobiologyWavebands 0.2.0
===========================

Edits to User Guide for compatibility and rebuilt with photobiology 0.5.1, now required.

photobiologyWavebands 0.1.0
===========================

Merge of photobiologyUV and photobiologyVIS packages.
Merged and updated the vignettes. Added functions for
calculating UV:PAR photon ratios. Added functions for
creating some coherent lists of wavbands (e.g. all ISO
defined colours).

********************
*  photobiologyUV  *
********************

photobiologyUV 0.2.8
====================

Added setting of wb.label in functions defining wavebands.

photobiologyUV 0.2.7
====================

Fixed a bug introduced in version 0.2.6: wrong name used for wavebands created by UVC().
photobiologyUV 0.2.6
====================

Added "medical" definitions of UVB and UVB.

photobiologyUV 0.2.5
====================
