@@ -4,7 +4,7 @@
 #' applied.
 #'
 #' @usage PAR(std="Plant")
-#' @param std a character string "Plant"
+#' @param std a character string "Plant" or "McCree"
 #'
 #' @return a waveband object wavelength defining a wavelength range.
 #'
@@ -12,11 +12,15 @@
 #'
 #' @seealso \code{\link{new_waveband}}  \code{\link{waveband}}
 #'
+#' @references
+#' McCree, K. J. The action spectrum, absorptance and quantum yield of photosynthesis in
+#' crop plants. Agricultural Meteorology, 1972, 9, 191-216
+#'
 #' @examples
 #' PAR()
 #' PAR("Plant")
-PAR <- function(std="Plant"){
-  if (std=="Plant") {
+PAR <- function(std = "Plant"){
+  if (std %in% c("Plant", "McCree")) {
     return(new_waveband(400, 700, wb.name="PAR"))
   } else {
     warning("'std' argument value not implemented.")
