@@ -19,13 +19,16 @@
 #' Active UV Radiation to Stratospheric Ozone Changes: Effects of Action Spectrum Shape
 #' and Wavelength Range Photochemistry and Photobiology, 78, 456-461
 #'
+#' [3] \url{http://cprm.acd.ucar.edu/Models/TUV/}
+#'
 #' @note In the original publication [1], the long-end wavelength boundary is not specified.
 #' the longest wavelength at which the plant response was measured is 366 nm. From the data there
 #' is no evidence that action would immediately drop to zero at longer wavelengths. We have used
 #' in earlier versions the same value as used by the 'NSF Polar Programs UV Monitoring Network' as
 #' described in \url{http://uv.biospherical.com/Version2/description-Version2-Database3.html}.
 #' Now we keep 390 nm as our default value, but make if possible for the user to set a different
-#' wavelength.
+#' wavelength. To reproduce the output of the TUV simulation model [3] version 5.0 set
+#' \code{w.high = 366}.
 #'
 #' In contrast to the NSF Network, for example, the programme TUV uses 366 nm as the limit, so for comparing
 #' results one may need to adjust the value of this parameter.
