@@ -10,7 +10,9 @@
 #'
 #' @export
 #' @references
-#' ISO-21348
+#' ISO-21348:2007 Space environment (natural and artificial) -- Process for determining
+#' solar irradiances. ISO, Geneva.
+#'
 #' @seealso \code{\link{photon_irradiance}} and \code{\link{energy_irradiance}}
 #' @examples
 #' Yellow()
